--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Angular Data</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/lib/angular/angular.min.js"></script>
 		<script src="js/lib/angular/angular-route.min.js"></script>
@@ -10,7 +11,7 @@
 		<script src="js/app.js"></script>
 	</head>
 	<body>
-		
+
 		<header>
 			<nav class="cf" ng-include="'views/nav.html'"></nav>
 		</header>
