--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -8,8 +8,12 @@
 		<script src="js/lib/angular/angular.min.js"></script>
 		<script src="js/lib/angular/angular-route.min.js"></script>
 		<script src="js/lib/angular/angular-animate.min.js"></script>
+		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+		<script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+
 		<script src="js/app.js"></script>
 		<script src="js/controllers/registration.js"></script>
+		<script></script>
 	</head>
 	<body>
 
