--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -13,6 +13,7 @@
 
 		<script src="js/app.js"></script>
 		<script src="js/controllers/registration.js"></script>
+		<script src="js/controllers/meetings.js"></script>
 		<script></script>
 	</head>
 	<body>
