--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -17,6 +17,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/controllers/registration.js"></script>
 		<script src="js/controllers/meetings.js"></script>
+		<script src="js/services/authentication.js"></script>
 		<script></script>
 	</head>
 	<body>
