--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -30,7 +30,7 @@
 		<div class="page">
 			<div class="userinfo" ng-controller="StatusController" ng-show="userEmail">
 				<span class="user">Hi {{userEmail}}</span>
-				<a href="#">logout</a>
+				<a href="#" ng-click="logout()">logout</a>
 			</div>
 			<main class="cf" ng-view>
 				
