--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -13,9 +13,8 @@
 	  <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
 	  <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
 		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="js/lib/gravatarjs/jquery.gravatar.js"></script>
-		<script src="js/lib/gravatarjs/md5.js"></script>
+		<!-- Angravatar -->
+		<script src=""></script>
 
 
 		<script src="js/app.js"></script>
