styling and fixes

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 	<head>
 		<meta charset="UTF-8">
-		<title>Angular Data</title>
+		<title>MeetingPoint</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/lib/angular/angular.min.js"></script>
