Showing User login by currentUser.firstname vs userEmail

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -28,8 +28,8 @@
 				ng-controller="StatusController"></nav>
 		</header>
 		<div class="page">
-			<div class="userinfo" ng-controller="StatusController" ng-show="userEmail">
-				<span class="user">Hi {{userEmail}}</span>
+			<div class="userinfo" ng-controller="StatusController" ng-show="currentUser">
+				<span class="user">Hi {{currentUser.firstname}}</span>
 				<a href="#" ng-click="logout()">logout</a>
 				<br>
 			</div>
