--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -12,6 +12,10 @@
 		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 	  <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
 	  <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="js/lib/gravatarjs/jquery.gravatar.js"></script>
+		<script src="js/lib/gravatarjs/md5.js"></script>
 
 
 		<script src="js/app.js"></script>
@@ -27,7 +31,9 @@
 			<nav class="cf" ng-include="'views/nav.html'" id="main_nav"
 				ng-controller="StatusController"></nav>
 		</header>
-			<div class="user_pic" ng-show="currentUser"></div>
+		
+		<div class="user_pic" ng-show="currentUser"></div>
+		
 		<div class="page">
 			<div class="userinfo" ng-controller="StatusController" ng-show="currentUser">
 				<span class="user">Hi {{currentUser.firstname}}</span>
@@ -38,8 +44,9 @@
 			</main>
 		</div>
 		<div class="push"></div>
-		<footer>
-			
-		</footer>
+		
+		<footer></footer>
+
+
 	</body>
 </html>
