added Checkins Controller

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -22,8 +22,9 @@
 		<script src="js/controllers/registration.js"></script>
 		<script src="js/controllers/meetings.js"></script>
 		<script src="js/controllers/status.js"></script>
+		<script src="js/controllers/checkins.js"></script>
 		<script src="js/services/authentication.js"></script>
-		<script></script>
+
 	</head>
 	<body>
 
