--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -14,7 +14,8 @@
 	  <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
 		
 		<!-- Angravatar -->
-		<script src=""></script>
+		<script src="js/lib/angular-gravatar/build/angular-gravatar.js"></script>
+		<script src="js/lib/angular-gravatar/build/md5.js"></script>
 
 
 		<script src="js/app.js"></script>
@@ -32,7 +33,9 @@
 				ng-controller="StatusController"></nav>
 		</header>
 		
-		<div class="user_pic" ng-show="currentUser"></div>
+		<div class="user_pic" ng-show="currentUser">
+			<img gravatar-src="{{currentUser.email}}" gravatar-size="100">
+		</div>
 		
 		<div class="page">
 			<div class="userinfo" ng-controller="StatusController" ng-show="currentUser">
